[gd_scene load_steps=2 format=3 uid="uid://c9x8k7v6m5nqr"]

[ext_resource type="Script" path="res://algorithms/randomness/distribution_visualization/DistributionVisualization.gd" id="1_distribution"]

[node name="DistributionVisualization" type="Node3D"]
script = ExtResource("1_distribution")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 12, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.2

[node name="DistributionPoints" type="Node3D" parent="."]

[node name="HistogramBars" type="Node3D" parent="."]

[node name="StatisticalCurve" type="Node3D" parent="."]

[node name="DistributionType" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 4, 0)
size = Vector3(1, 0.5, 0.4)

[node name="SampleCount" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 4, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="Parameter1" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -3, 0)
top_radius = 0.2
bottom_radius = 0.2
height = 1.0

[node name="Parameter2" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, -3, 0)
top_radius = 0.2
bottom_radius = 0.2
height = 1.0
